Grab owner events delivered to incorrect surface
This affects at least Wayland and the macOS backend, so I would venture to guess the others too.
If you have a grab with owner_events=TRUE
we get this really weird thing happening where using the X,Y space of another toplevel (the surface under pointer) for the GdkEvent
causes the grab->surface to get the event with incorrect coordinates.
I think what should happen here is that motion events should be dropped from the grab event stream if they don't match the right surface.